# dia-agent-platform

./: .env.example  .gitignore  PHASE1_COMPLETION.md  PHASE2_TODO_LIST.md  PROJECT_DETAILED_DOCUMENTATION.md  README.md  README_GUIDE_CHATGPT.md  pyproject.toml  requirements.lock.txt  requirements.txt
agents/dia/: README.md  agent.py  graph.py  insights.py  report.py
agents/dia/prompts/: insight.md
agents/logcop/: README.md  agent.py  graph.py
agents/logcop/prompts/: insight.md
apps/: __init__.py
apps/chainlit_app/: app.py
apps/chainlit_app/ui/: render.py  steps.py  upload.py
core/agent/: audit.py  base.py  registry.py  reviewer.py  router.py  runner.py  stages.py
core/artifacts/: types.py
core/config/: settings.py
core/context/: __init__.py  normalize.py  schema.py
core/llm/: client.py  models.py  prompts.py  ux.py  validators.py
core/logging/: logger.py
core/routing/: router.py  rules.py
core/tests/: smoke_audit.py  smoke_context.py  smoke_file_loader.py  smoke_meta.py  smoke_route.py
core/tools/: __init__.py  base.py  file_loader.py
core/utils/: fs.py  time.py
scripts/: bootstrap.ps1  smoke.py  smoke_context.py  smoke_file_loader.py  smoke_llm.py  smoke_route.py
tests/fixtures/: sample.txt  sample_utf8bom.csv
